[gd_scene load_steps=56 format=2]

[ext_resource path="res://PixelArt/Buildings/checkpoint.png" type="Texture" id=1]
[ext_resource path="res://Buildings/Checkpoint/Checkpoint.gd" type="Script" id=2]
[ext_resource path="res://Lighting/LightSource.tscn" type="PackedScene" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 288, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 384, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 480, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 576, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 672, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 768, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 864, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 960, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 1056, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 1152, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 1248, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 1344, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 1440, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 1536, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 1632, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 1728, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 1 )
region = Rect2( 1824, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 1 )
region = Rect2( 1920, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 1 )
region = Rect2( 2016, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 1 )
region = Rect2( 2112, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 1 )
region = Rect2( 2208, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 1 )
region = Rect2( 2304, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 1 )
region = Rect2( 2400, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 1 )
region = Rect2( 2496, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 1 )
region = Rect2( 2592, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 1 )
region = Rect2( 2688, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 1 )
region = Rect2( 2784, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 1 )
region = Rect2( 2880, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 1 )
region = Rect2( 2976, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 1 )
region = Rect2( 3072, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 1 )
region = Rect2( 3168, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 1 )
region = Rect2( 3264, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 1 )
region = Rect2( 3360, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 1 )
region = Rect2( 3456, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 1 )
region = Rect2( 3552, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 1 )
region = Rect2( 3648, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 1 )
region = Rect2( 3744, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 1 )
region = Rect2( 3840, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 1 )
region = Rect2( 3936, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 1 )
region = Rect2( 4032, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 1 )
region = Rect2( 4128, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 1 )
region = Rect2( 4224, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 1 )
region = Rect2( 4320, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 1 )
region = Rect2( 4416, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 1 )
region = Rect2( 4512, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 1 )
region = Rect2( 4608, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 1 )
region = Rect2( 4704, 0, 96, 96 )

[sub_resource type="SpriteFrames" id=51]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ) ],
"loop": false,
"name": "default",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=52]
extents = Vector2( 16.9112, 11.0038 )

[node name="Checkpoint" type="Node2D"]
scale = Vector2( 2, 2 )
script = ExtResource( 2 )

[node name="CheckpointAnimation" type="AnimatedSprite" parent="."]
position = Vector2( 0, 33.5 )
frames = SubResource( 51 )

[node name="Collisions" type="StaticBody2D" parent="."]
position = Vector2( 0, -1.5 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Collisions"]
position = Vector2( -0.155334, 0.0619888 )
rotation = 3.14159
scale = Vector2( 1, -1 )
polygon = PoolVector2Array( -40, 0, -8, 0, -8.04023, 11.9063, -24.1321, 11.8507, -24.1266, 21.1076, -35.0057, 21.1076, -35.0582, 22.0536, -37.0028, 22.0011, -37.0553, 22.842, -38.0539, 22.9471, -38.0539, 23.8931, -39.9985, 23.9456, -40.1364, 24.8623, -41.1392, 24.9508, -41.1687, 25.8061, -43.145, 25.8946, -43.1745, 26.8385, -44.1773, 26.8975, -44.2068, 27.8709, -46.0356, 27.9594, -45.9356, 27.4961, -44.4826, 27.3203, -44.4269, 26.513, -43.5082, 26.4851, -43.4247, 25.4272, -41.5037, 25.3715, -41.4529, 24.5148, -40.39, 24.5084, -40.3065, 23.534, -40.2508, 21.5852 )

[node name="CollisionPolygon2D4" type="CollisionPolygon2D" parent="Collisions"]
position = Vector2( -0.155334, 0.0619888 )
polygon = PoolVector2Array( -40, 0, -8, 0, -8.04023, 11.9063, -24.1321, 11.8507, -24.1266, 21.1076, -35.0057, 21.1076, -35.0582, 22.0536, -37.0028, 22.0011, -37.0553, 22.842, -38.0539, 22.9471, -38.0539, 23.8931, -39.9985, 23.9456, -40.1364, 24.8623, -41.1392, 24.9508, -41.1687, 25.8061, -43.145, 25.8946, -43.1745, 26.8385, -44.1773, 26.8975, -44.2068, 27.8709, -46.0356, 27.9594, -45.9356, 27.4961, -44.4826, 27.3203, -44.4269, 26.513, -43.5082, 26.4851, -43.4247, 25.4272, -41.5037, 25.3715, -41.4529, 24.5148, -40.39, 24.5084, -40.3065, 23.534, -40.2508, 21.5852 )

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="Collisions"]
polygon = PoolVector2Array( 42.9017, 70.993, 41.8852, 70.9488, 41.841, 72.0536, 28.0082, 72.142, 28.0082, 70.993, 26.9476, 71.0371, 26.9034, 65.999, 9.04891, 65.9106, 9.00472, 69.8439, 8.51858, 69.7997, 8.43019, 47.0397, 23.8982, 46.9514, 23.9865, 34.7538, 36.8186, 34.9749, 36.8973, 35.9592, 37.9998, 36.0774, 37.9604, 37.0617, 39.8523, 37.0519, 39.9406, 37.98, 40.8687, 37.98, 40.9571, 38.8196, 42.9458, 39.0406, 42.99, 40.0571, 43.8739, 40.0571, 43.9623, 41.9132, 45.951, 41.9574, 45.9069, 42.9739, 39.9848, 42.9739, 40.0155, 47.9682, 42.8248, 48.0619, 42.9184, 57.9413, 42.9184, 60.9379, 40.9987, 60.9379, 40.9987, 65.0115, 41.982, 65.1051, 41.982, 65.7606, 42.8716, 65.7138 )

[node name="CollisionPolygon2D5" type="CollisionPolygon2D" parent="Collisions"]
rotation = 3.14159
scale = Vector2( 1, -1 )
polygon = PoolVector2Array( 42.9017, 70.993, 41.8852, 70.9488, 41.841, 72.0536, 28.0082, 72.142, 28.0082, 70.993, 26.9476, 71.0371, 26.9034, 65.999, 9.04891, 65.9106, 9.00472, 69.8439, 8.51858, 69.7997, 8.43019, 47.0397, 23.8982, 46.9514, 23.9865, 34.7538, 36.8186, 34.9749, 36.8973, 35.9592, 37.9998, 36.0774, 37.9604, 37.0617, 39.8523, 37.0519, 39.9406, 37.98, 40.8687, 37.98, 40.9571, 38.8196, 42.9458, 39.0406, 42.99, 40.0571, 43.8739, 40.0571, 43.9623, 41.9132, 45.951, 41.9574, 45.9069, 42.9739, 39.9848, 42.9739, 40.0155, 47.9682, 42.8248, 48.0619, 42.9184, 57.9413, 42.9184, 60.9379, 40.9987, 60.9379, 40.9987, 65.0115, 41.982, 65.1051, 41.982, 65.7606, 42.8716, 65.7138 )

[node name="PlayerDetector" type="Area2D" parent="."]
position = Vector2( 0, -1.5 )
collision_layer = 2147745792
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
position = Vector2( 0, 28.129 )
shape = SubResource( 52 )

[node name="Lights" type="Node2D" parent="."]

[node name="MidStar" parent="Lights" instance=ExtResource( 3 )]
visible = false
position = Vector2( 0, 26 )
color = Color( 0.427451, 1, 0.980392, 1 )
radius = 40
strength = 0.6

[node name="LeftStar" parent="Lights" instance=ExtResource( 3 )]
visible = false
position = Vector2( -21, 27 )
color = Color( 0.427451, 1, 0.980392, 1 )
radius = 20
strength = 0.5

[node name="RightStar" parent="Lights" instance=ExtResource( 3 )]
visible = false
position = Vector2( 21, 27 )
color = Color( 0.427451, 1, 0.980392, 1 )
radius = 20
strength = 0.5

[node name="DownStar" parent="Lights" instance=ExtResource( 3 )]
visible = false
position = Vector2( 0, 42 )
color = Color( 0.427451, 1, 0.980392, 1 )
radius = 20
strength = 0.5

[node name="TopStar" parent="Lights" instance=ExtResource( 3 )]
visible = false
position = Vector2( 0, 12.5 )
color = Color( 0.427451, 1, 0.980392, 1 )
radius = 20
strength = 0.5

[node name="LeftColumn" parent="Lights" instance=ExtResource( 3 )]
visible = false
position = Vector2( -35, 51.5 )
color = Color( 0.427451, 1, 0.980392, 1 )
radius = 20
strength = 0.5

[node name="RightColumn" parent="Lights" instance=ExtResource( 3 )]
visible = false
position = Vector2( 35, 51.5 )
color = Color( 0.427451, 1, 0.980392, 1 )
radius = 20
strength = 0.5

[connection signal="frame_changed" from="CheckpointAnimation" to="." method="_on_CheckpointAnimation_frame_changed"]
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="body_exited" from="PlayerDetector" to="." method="_on_PlayerDetector_body_exited"]
